bug 331453 : downloading a binary file results in a corrupted (truncated) file : r/sr=darin